src/style.css
/* ... */
.Toastify__toast-theme--dark.Toastify__toast--error {
	color: var(--color-error);
}

html {
	font-size: 62.5%;
	scroll-behavior: smooth;
}

::-webkit-scrollbar,
::-webkit-scrollbar {
	width: 8px;
	height: 8px;
}

::-webkit-scrollbar-thumb,
::-webkit-scrollbar-track,
::-webkit-scrollbar-corner {
	background-color: var(--color-primary);
}

::-webkit-scrollbar-thumb {
	border: 2px solid var(--color-primary);
	background-color: var(--color-secondary);
	transition: background-color 100ms ease-out;
}

body {
	color: var(--color-body);
	font-family: "Titillium Web", sans-serif;
	letter-spacing: 1px;
	font-size: 1.6rem;
	line-height: 1.5;
	margin: 0;
	padding: 0;
	background: #0a0a0a;
}
a,
a:hover,
a:active,
a:visited {
	text-decoration: none;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "averox";
	font-weight: bold;
	color: var(--color-secondary);
	text-transform: lowercase;
	text-shadow: 0 0 4px var(--color-secondary);
	letter-spacing: 3px;
	margin: 0;
}
/* HEADINGS */
.h1 {
	font-size: 2.6rem;
}
.h2 {
	font-size: 2.2rem;
}
.h3 {
	font-size: 2rem;
}
@media screen and (min-width: 768px) {
	.h1 {
		font-size: 3rem;
	}
	.h2 {
		font-size: 2.4rem;
	}
	.h3 {
		font-size: 1.8rem;
	}
}
em {
	color: var(--color-accent);
	font-weight: bold;
	font-style: normal;
}
.text--accent {
	color: var(--color-accent);
	text-shadow: 0 0 var(--color-accent);
}

/* LINK */
.link {
	color: #cccccc;
	text-shadow: 0 0 5px var(--color-secondary);
	font-size: 1.6rem;
	position: relative;
}
.link:hover,
.link--active {
	color: var(--color-accent);
	text-shadow: 0 0 3px var(--color-accent);
}
@media (min-width: 768px) {
	.link {
		font-size: 2.1rem;
	}
}

/* ARWES OVERWRITE */
div.css-13g2lpz-Card {
	margin-top: 20px;
}
div.css-f8z0ma-Card {
	background: var(--color-accent);
	box-shadow: 0 0 3px var(--color-accent);
}
/* BACKGROUND */

.background {
	position: fixed;
	width: 100%;
	height: 100%;
	background: #000;
	z-index: -1;
}
.background__container {
	position: absolute;
	top: 0;
	z-index: 0;
	display: block;
	height: 100%;
	width: 100%;
}
.background--animate {
	opacity: 0;
	animation: animateOpacity 0.5s forwards;
}
.background__radial {
	background-image: radial-gradient(
		rgba(39, 225, 250, 0.1) 25%,
		transparent 100%
	);
	background-repeat: no-repeat;
	background-position: center;
}
.background__linear-line {
	position: absolute;
	left: 0;
	right: 0;
	height: 1px;
	background: var(--color-primary);
	box-shadow: 0 0 1px #000;
	opacity: 0.6;
}
.background__dotted-line {
	stroke: var(--color-primary);
	stroke-dasharray: 6;
	stroke-width: 1;
	stroke-dashoffset: 100;
	animation: animateDashoffset 1s forwards;
}
.background__circuit-container {
	opacity: 0.8;
}
.background__circuit-line {
	fill: none;
	stroke: #065858;
	stroke-width: 1;
}
.background__circuit-line-light {
	fill: none;
	stroke-linejoin: round;
	stroke-width: 2;
	stroke: white;
	opacity: 0;
}
.background__circuit-dot {
	fill: #043b3b;
}

@media (min-width: 1024px) {
	.background__radial {
		background-size: 0% 0%;
		animation: animateBackgroundSize 0.5s 1s forwards;
	}
	.background__circuit-container {
		stroke-dasharray: 2000;
		animation: animateDashoffset 1s forwards;
		animation: animateDashoffset 1s forwards;
		stroke-dashoffset: 2000;
	}
}
/* Assemble */
.assemble {
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
	background: #0a0a0a;
}
.assemble__popup {
	padding: 1rem;
	display: flex;
	flex-direction: column;
}
.assemble__text {
	color: var(--color-secondary);
	display: block;
	margin-bottom: 1rem;
}
.assemble__button {
	font-size: 1.5rem;
	display: inline-block;
	color: var(--color-secondary);
}
/* SPLASH */
.splash {
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: center;
	max-width: 780px;
	margin: 0 auto;
}
.splash .splash-menu {
	margin: 2.5rem 0 5rem 0;
}

.splash__title {
	text-align: center;
	margin: 4rem auto 1rem auto;
}
/* EXPLORE */
.explore-container {
	/* ICON CONTAINER*/
	position: absolute;
	bottom: 10%;
	left: 50%;
	transform: translateX(-50%);
}
.explore-icon .icon__image {
	stroke: #fff;
	stroke-width: 0.6;
	fill: none;
	width: 35px;
	padding: 0.6rem;
	cursor: pointer;

	animation: pulse-icon--secondary 2s infinite;
}
@media (min-width: 768px) {
	.explore-icon .icon__image {
		width: 45px;
	}
	.explore {
		margin-top: 12rem;
	}
}

/* brand */
.brand {
	padding: 0 1rem;
	margin: 0 auto;
}
.brand__logo {
	fill-rule: evenodd;
	stroke-linecap: round;
	width: 100%;
	fill: none;
	stroke: white;
	filter: drop-shadow(0 0 2px var(--color-secondary));
}
.brand__subtitle {
	text-transform: uppercase;
	font-size: 1.1rem;
	color: var(--color-accent);
	text-shadow: 0 0 2px var(--color-accent);
	position: relative;
	bottom: 6px;
}
@media (min-width: 768px) {
	.brand__subtitle {
		font-size: 1.5rem;
	}
}

/* Icon */
.icon {
	filter: drop-shadow(0 0 2px var(--color-secondary));
}
.icon--secondary {
	filter: drop-shadow(0 0 2px var(--color-accent));
}
.icon--round .icon__image {
	border-radius: 50%;
	border: 2px solid var(--color-secondary);
}
.icon--round.icon--secondary .icon__image {
	border-radius: 50%;
	border: 2px solid var(--color-accent);
}
.icon--clipper .icon__sub {
	clip-path: polygon(
		30% 0%,
		70% 0%,
		100% 30%,
		100% 70%,
		70% 100%,
		30% 100%,
		0% 70%,
		0% 30%
	);
	padding: 2px;
}
.icon--clipper .icon__image {
	clip-path: polygon(
		30% 0%,
		70% 0%,
		100% 30%,
		100% 70%,
		70% 100%,
		30% 100%,
		0% 70%,
		0% 30%
	);
}
.icon__sub {
	align-items: center;
	background: var(--color-secondary);
	display: inline-flex;
	justify-content: center;
}
.icon--secondary .icon__sub {
	background: var(--color-accent);
}
.icon__image {
	background: #073942;
}
.icon--secondary .icon__image {
	background: rgb(99, 71, 36);
}
.icon:hover .icon__image {
	background: #174952;
}
.icon--secondary:hover .icon__image {
	background: #522f17;
}
/* List */
.list {
	list-style: none;
}

/* PEGI */
.pegi {
	display: flex;
	justify-content: center;
}
.pegi__icon {
	position: absolute;
}
/* ... */

